Intellij analysis fixes